Fix btn-outline-info contrast on bg-light

--- a/src/index.css
+++ b/src/index.css
@@ -10800,7 +10800,8 @@ a:hover {
   color: var(--uog-color-body-copy-link-on-dark);
 }
 .bg-light a,
-.table-striped a {
+.table-striped a,
+.bg-light a.btn-outline-info {
   color: var(--uog-color-body-copy-link-on-light);
 }
 .site-content ul.menu.list-group {
